--- a/GRP02/SD/SDLista2/webservice/package.json
+++ b/GRP02/SD/SDLista2/webservice/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "webservice",
-  "version": "0.0.0",
-  "private": true,
+  "name": "consulta-senhas",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www --trace-warnings --trace-sync-io"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon db.js"
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "ip": "^1.1.8",
-    "jade": "~1.11.0",
-    "moment": "^2.29.4",
-    "morgan": "~1.9.1",
-    "mysql": "^2.18.1",
-    "node-sass-middleware": "0.11.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
-  },
-  "main": "app.js",
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20"
+  }
 }
